test/bad/loops/for6.px

for i in 1..1 do
    skip
for j in j..j do
    skip
